    Thus, propagation to a higher or lower data type works correctly when 
    performed on pseries, e.g. c("pseries", "integer") is propagated
    to c("pseries", "numeric") if an operation returns a decimal.
  * Between.matrix: bug fixed, so that the transformation can
    be correctly performed for a matrix without index attribute.
  * Between and Within methods for matrices are now exported.
  * summary.plm: removed support for ill-named argument '.vcov', instead use
    'vcov'. '.vcov' has been deprecated in plm 1.6-4 on CRAN since 2016-11-30.
  * as.data.frame.pdata.frame gained argument 'keep.attributes'.
  * [.pdata.frame: in case a single column, i.e., a pseries is returned, this 
    pseries now has names (now consistent to extraction by $.pdata.frame and
    [[.pdata.frame).
  * is.pseries: added function to check if an object qualifies as a pseries.
  * (internal) is.index, has.index: new non-exported functions to check if an
    object is or has a proper index (in the sense of the plm package).
  * pdata.frame: fixed bug so that pdata.frames with only one column can be 
    created if drop.index = TRUE is set.
  * Fixed first-difference models (plm(., model = "fd"), pggls(., model = "fd"))
    to have an intercept by default again (disappeared in plm 1.6-6).
  * make.pconsecutive for pseries: for inputted consecutive pseries, the argument
    'balanced' was not respected.
  * pvar: added method for pseries.
  * pmodel.response, fitted.plm, residuals.plm: for "between" and "fd" models, 
    a pure numeric is returned, not an 'illegal' pseries anymore (these models 
    compress data where having an index/pseries is useless and misleading).
  * pvcm object: element 'residuals' is now of class c("pseries", "numeric") 
    (were: "numeric" for within, "matrix" with one column for random model);
    element 'df.residuals' renamed to 'df.residual' (cf. lm, plm, ...).
  * print.pseries: prettier printing for c("pseries", "complex").